app/assets/stylesheets/posts.css.scss
.nomargin { margin: 0 !important; }

.recent-posts {
    clear: both;
    overflow: hidden;
    .recent-post {
        background: #fafafa;
        border-right: 1px solid #dedede;
        border-left: 1px solid #dedede;
        border-bottom: 1px solid #dedede;
        display: block;
        width: 298px;
        height: 100px;
        padding: 5px 10px 5px 5px;
        float: left;

        &:nth-child(even) { border-left: none; }
        &:hover { background: #efefef; }
        h3 {
            margin-top: 6px;
            font-size: 12px;
            line-height: 14px;
            display: block;
            height: 14px;
        }
        p {
            line-height: 1.2;
            font-size: 12px;
        }
        img {
            display: block;
            width: 60px;
            height: 60px;
            float: left;
            margin: 20px 10px;
        }
    }
}

.all-posts {
    .post {
        clear: both;
        padding: 10px;
        overflow: hidden;
        img {
            display: block;
            width: 100px;
            height: 100px;
            float: left;
            box-shadow: 0 0 4px #666;
        }
        .content {
            float: left;
            width: 485px;
            padding: 5px 10px 10px;
            h3 {
                line-height: 24px;
                font-size: 24px;
                margin: 0 0 7px 0;
                padding: 0;
            }
            p {
                font-family: arial, sans-serif;
                font-size: 14px;
                line-height: 1.3;
                color: #666;
            }
            a { color: #000; text-decoration: none; }
            a:hover { text-decoration: underline; }
        }
    }
}


.single {
    p {
        font-family: "ff-meta-web-pro",sans-serif;
        font-size: 16px;
        line-height: 1.4em;
    }
    .post {
        img {
            width: 500px;
            margin: 20px;
            display: block;
            border: 10px solid #ddd;
        }

        a { color: #666; }
        a:hover { color: #aaa; }

        a:hover img {
            border: 10px solid #ccc;
        }

        ol, ul {
            margin: 15px 0;
            padding-left: 40px;
        }

        ul li {
            list-style: disc;
        }
        ol li {
            list-style: decimal;
        }
    }
}

.comments-wrap {
    margin-top: 20px;

    .comments {
        padding: 10px;
        background: #f2f2f2;
        h2 {
            line-height: 1;
            font-size: 32px;
        }
        .comment {
            border-bottom: 1px solid #ddd;
            padding: 10px;
            h4 {
                padding-bottom: 10px;
                span.date {
                    padding-left: 10px;
                    display: inline-block;
                    font-weight: normal;
                }
                span.voting {
                    float: right;
                    display: inline-block;
                }
            }
        }
    }

}

.new-comment {
    margin-top: 40px;
}

.guidelines {
    padding-bottom: 15px;
    font-size: 10px;
    line-height: 1.4;

    ul {
        padding-left: 20px;
        li {
            list-style: disc;
        }
    }
}

#post_content {
    height: 450px;
}

.taglist {
    display: block;
    overflow: hidden;
}

#author-box {
    padding: 10px;
    margin: 20px 5px 0;
    border-radius: 5px;
    background: #efefef;
    overflow: hidden;

    .avatar, .content { float: left; }
    .avatar img {
        border-radius: 5px;
        width: 80px;
    }
    .content {
        .name { font-weight: bold; }
        padding: 0 10px;
        width: 400px;
    }
}

